--- a/Chapitre7.tex
+++ b/Chapitre7.tex
@@ -47,7 +47,7 @@ B_{total}\,=\,B_0\,+\,B.
 Les équations de la magnétostatique de Maxwell, fournissent alors, dans l’espace réciproque
 une relation entre la perturbation du champ $B $ et la distribution de susceptibilité:
 \begin{equation}
-{\cal F}\,B\,=\,\biggl(\frac{1}{3}-\frac{k_z^2}{k_x^2+k_y^2+k_z^2}\biggr)\,\circ\,({\cal F}\chi )
+{\cal F}\,B\,=\,\biggl(\frac{1}{3}-\frac{k_z^2}{k_x^2+k_y^2+k_z^2}\biggr)\,\,({\cal F}\chi )
 \end{equation}
 où ${\cal F}$ la transformée de Fourier, $k_x$ , $k_y$ et $k_z$ sont les coordonnées du vecteur d’ondes, la direction $Z$
 coincidant avec celle du champ $B_0$.\\
@@ -448,7 +448,7 @@ Il devient possible de représenter la solution analytique sous la forme :
 \begin{equation}
 \chi\,=\,{\cal F}^{-1}{\cal D}[{\cal D}^2\,+\,\lambda(E_x^2+E_y^2+E_z^2)]^{-1}{\cal F}B_{in}.
 \end{equation}
-Le calcul de $\chi$ ne coûte plus alors que deux transformées de Fourier et la multiplication de matrices
+Avec $E_y$ et $E_z$ calculés comme $E_x$. Le calcul de $\chi$ ne coûte plus alors que deux transformées de Fourier et la multiplication de matrices
 diagonales. Cela réduit le temps de calcul d’un facteur 1000 en rapport de l’approche itérative avec
 des résultats comparables (\cite{Bilgic2013}).
 %%%
