--- a/Chapitre8.tex
+++ b/Chapitre8.tex
@@ -56,8 +56,9 @@ représentation plausible d’une partie importante de la vascularisation.
 
 Les prochains développements du modèle devront donc l’enrichir de données morphologiques
 plus précises grâce aux évolutions des séquences, mais aussi aux CCO. Une meilleure intégration des
-données physiologiques assurera par ailleurs une fidélité importante du modèle à la réalité. Il est enfin
-important de valider le modèle sur des cohortes plus importantes pour s’assurer de sa reproductibilité.
+données physiologiques assurera par ailleurs une fidélité importante du modèle à la réalité.
+
+Il est enfin important de valider le modèle sur des cohortes plus importantes pour s’assurer de sa reproductibilité. 
 
 
 
