--- a/Chapitre7.tex
+++ b/Chapitre7.tex
@@ -271,7 +271,7 @@ variations de phases interne ne peut pas être rigoureusement précisé. Une mé
 élimine ensuite cette contribution pour récupérer la phase intérieure (liée aux tissus). Cela est réalisé
 en résolvant un problème des moindres carrés :
 \begin{equation}
-\chi_{out}\,=\,argmin_{\chi}\,\parallel M\bigl(B-{\cal F}^{-1}{\cal D}{\cal F}\bigr\tilde{M}\chi)\parallel_2^2,
+\chi_{out}\,=\,argmin_{\chi}\,\parallel M\bigl(B-{\cal F}^{-1}{\cal D}{\cal F}\bigr)\tilde{M}\chi)\parallel_2^2,
 \end{equation}
 formule dans laquelle on minimise l’écart entre le champ et les effets des susceptibilités extérieures recherchées. $M$ est ici le masque du cerveau et $\tilde{M}$ son complément.\\
 Une fois $\chi_{out}$ déterminé, le champ interne $B_{in}$ issu des tissus est obtenu via la formule :
