--- a/jeremythesebib.bib
+++ b/jeremythesebib.bib
@@ -2877,3 +2877,13 @@ title = {{Active contours without edges}},
 volume = {10},
 year = {2001}
 }
+
+@article{Ashoor2006,
+author = {Ashoor,M and Jahed, M and Chopp, M and Mireshghi, A},
+journal = {Scientia Iranica},
+number = {4},
+pages = {348-354},
+title = {{Estimation of Mean Radius, Length and Density of Microvasculature Using Diffusion and PerfusionMRI }},
+volume = {13},
+year = {2006}
+}
