--- a/Main.tex
+++ b/Main.tex
@@ -65,7 +65,7 @@
 
 
 \begin{document}
-\includepdf[pages={1}]{pagedegarde.pdf}
+%\includepdf[pages={1}]{pagedegarde.pdf}
 
 % Préambule
 	%\pagedegarde
