--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -186,7 +186,7 @@ Les ventricules représentent 2\% du volume total du cerveau soit 37 mL (\cite{A
 %%%
 %%%
 \section{Informations structurales fournies par l'imagerie IRM}
-Dans notre approche, nous avons choisi de baser l’architecture de notre modèle sur celle du sujet lui-même. Cette ambition requiert l’acquisition de données spécifiques permettant d’appréhender son anatomie vasculaire.
+Dans notre approche, nous avons choisi de baser l’architecture de notre modèle sur celle du sujet lui-même. Cette ambition requiert l’acquisition de données spécifiques permettant d’appréhender son anatomie vasculaire. Les données morphologiques de la microcirculation sont pour le moment difficilement atteignable en IRM malgré l'existence de séquences d'imagerie avancées en cours de développement (\cite{Ashoor2006}). Nous nous focaliserons ainsi sur les artères et les veines.
 
 Les propriétés biophysiques respectives du système artériel et du système veineux (vitesses d’écoulements, susceptibilité magnétique) font que les mêmes séquences d’imagerie ne fournissent pas la même qualité de détails pour ces deux systèmes. Seule l’injection d’un produit de contraste permet d’utiliser la même séquence pour visualiser le système artériel et le système veineux moyennant une adaptation des paramètres d’acquisitions au temps d’arrivée du produit de contraste dans les deux systèmes. Cette imagerie par injection de produit de contraste constitue d’ailleurs l’outil de référence pour l’imagerie morphologique qui nous intéresse, et c’est à ce titre que nous allons commencer par la décrire (\cite{Takano1999},~\cite{Sohn2003}). En effet, c’est la technique offrant le meilleur rapport signal sur bruit, et permettant la meilleure imagerie des flux turbulents. Néanmoins, le caractère invasif de l’injection limite l’application pour des raisons à la fois médicales et techniques. Dans un deuxième temps nous décrirons donc des modalités d’imagerie de substitution davantage utilisables en « routine » pour l’imagerie des systèmes artériels et veineux.
 %%%
