--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -312,7 +312,7 @@ Nous avons donc défini un protocole d’acquisition IRM dédié à l’impléme
 Concernant les informations morphologiques, le protocole inclut les imageries anatomiques suivantes :
 \begin{itemize}
 \item un 3DT1 pour récupérer les volumes de matière grise, de matière blanche et de LCS, acquis avec les paramètres suivants : champ de vue = 25 x 25 cm, temps d’écho = 2.5 ms, temps de répétition = 1690 ms, angle de bascule = 9°, taille de voxel = 0.98 x 0.98 x 1 mm$^3$, 176 niveaux de coupes, temps d'acquisition = 4 min ;
-\item un temps de vol artériel pour accéder à l’architecture artérielle, avec les paramètres : champ de vue 18.1 x 20 cm, temps d’écho = 3.43 ms, temps de répétition = 21 ms, angle de bascule = 18°, taille de voxel = 0.26 x 0.26 x 0.6 mm$^3$, 220 niveaux de coupes,  temps d'acquisition = 6 min ; avec une couverture suffisante pour imager jusqu’à la partie supérieure de l’artère cérébrale antérieure
+\item un temps de vol artériel pour accéder à l’architecture artérielle, avec les paramètres : champ de vue 18.1 x 20 cm, temps d’écho = 3.43 ms, temps de répétition = 21 ms, angle de bascule = 18°, taille de voxel = 0.26 x 0.26 x 0.6 mm$^3$, 220 niveaux de coupes,  temps d'acquisition = 6 min, 4 tranches avec facteur de distance = -20.45 \%,  résolution des coupes 50 \% (chevauchement), largeur de bande = 186 Hz/Px, pente impulsion TONE = 70 \%; avec une couverture suffisante pour imager jusqu’à la partie supérieure de l’artère cérébrale antérieure.
 \item un contraste de phase qualitatif pour récupérer le compartiment veineux avec les paramètres : champ de vue 24 x 24 cm, temps d’écho = 7.91 ms, temps de répétition = 35.7 ms, angle de bascule = 15°, taille de voxel = 0.47 x 0.47 x 1 mm$^3$, 144 niveaux de coupes,  temps d'acquisition = 6 min ;
 \item une imagerie quantitative de susceptibilité magnétique afin de préciser l’arborescence veineuse avec les paramètres : champ de vue 20 x 22 cm, temps d’échos = 10/20 ms, temps de répétition = 27 ms, angle de bascule = 15°, taille de voxel = 0.69 x 0.69 x 0.6 mm$^3$, 224 niveaux de coupes,  temps d'acquisition = 6 min 30 sec ; avec sauvegarde des raw data.
 \end{itemize}
