--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -168,7 +168,7 @@ On repère tout d’abord les nœuds ayant un double lien direct avec un autre n
 \begin{figure}[!t]
 \centering
 \includegraphics[width=10cm]{2_11_nettoyage_graphe}
-\caption{Exemple de nettoyage automatique d'un graphe artériel. En haut le graphe brut, en bas le graphe nettoyé.}
+\caption{Exemple de nettoyage automatique d'un graphe artériel. En haut le graphe brut, en bas le graphe nettoyé. Notons que la longueur moyenne des segments avant nettoyage est de 19.3 mm (écart-type = 23.54 mm) et après nettoyage de 42.3 mm (écart-type = 47.58 mm).}
 \label{fig:2_11_nettoyage_graphe}	
 \end{figure}	
 
